# cpp-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/math/: ops.cpp
tests/: test_main.cpp
tests/unit/math/: test_nested.cpp
